count_trailing_zeros doesn't handle 64-bit values on 32-bit JVM

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 17
    • Affects Version/s: None
    • Component/s: hotspot
    • b02

      count_trailing_zeros is defined only for uintx arguments, which means it doesn't work properly for a 64-bit argument on 32-bit JVMs, since the value will be downcast to 32-bit.

      We should consider making this a template function.

            Assignee:
            Claes Redestad
            Reporter:
            Claes Redestad
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: