8257985: count_trailing_zeros doesn't handle 64-bit values on 32-bit JVM